--- a/FSKs/finance-app/client/package.json
+++ b/FSKs/finance-app/client/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.5",
     "regression": "^2.0.1"
