--- a/FSKs/finance-app/server/package.json
+++ b/FSKs/finance-app/server/package.json
@@ -3,17 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/index.ts",
+    "dev": "nodemon ./src/index.js",
     "watch": "tsc -w"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.12.7",
-    "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "nodemon": "^3.1.0"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
