--- a/FSKs/blog/server/package.json
+++ b/FSKs/blog/server/package.json
@@ -13,8 +13,10 @@
     "prettier:fix": "prettier --write ."
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
