--- a/FSKs/blog/client/package.json
+++ b/FSKs/blog/client/package.json
@@ -25,11 +25,11 @@
     "@tiptap/react": "^2.3.0",
     "@tiptap/starter-kit": "^2.3.0",
     "@uidotdev/usehooks": "^2.4.1",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
     "axios": "^1.6.8",
     "html-react-parser": "^5.1.10",
     "lowlight": "^3.1.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
     "react-easy-crop": "^5.0.6",
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
@@ -39,12 +39,14 @@
     "react-select": "^5.8.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.10.2",
     "eslint": "^9.1.1",
     "eslint-plugin-react-hooks": "^4.6.1",
     "eslint-plugin-react-refresh": "^0.4.6",
