--- a/Portfolio/my-portfolio/package.json
+++ b/Portfolio/my-portfolio/package.json
@@ -9,15 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.105.4",
+    "@react-three/fiber": "^8.16.5",
     "@types/react-leaflet": "^3.0.0",
     "framer-motion": "^11.1.9",
-    "leaflet": "^1.9.4",
+    "maath": "^0.10.7",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
     "react-scroll": "^1.9.0",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "three": "^0.163.0"
   },
   "devDependencies": {
     "@types/node": "^20",
