--- a/NextJS/eraser-clone/package.json
+++ b/NextJS/eraser-clone/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@kinde-oss/kinde-auth-nextjs": "^2.2.10",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.12.0",
     "lucide-react": "^0.379.0",
+    "moment": "^2.30.1",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
