--- a/NextJS/eraser-clone/package.json
+++ b/NextJS/eraser-clone/package.json
@@ -9,6 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@editorjs/checklist": "^1.6.0",
+    "@editorjs/editorjs": "^2.29.0",
+    "@editorjs/header": "^2.8.1",
+    "@editorjs/list": "^1.9.0",
+    "@editorjs/paragraph": "^2.11.3",
+    "@editorjs/warning": "^1.4.0",
+    "@editorjs/editorjs": "^2.29.1",
+    "@excalidraw/excalidraw": "^0.17.3",
     "@kinde-oss/kinde-auth-nextjs": "^2.2.10",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
