--- a/Saas/duolingo/package.json
+++ b/Saas/duolingo/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "db:studio": "npx drizzle-kit studio",
     "db:push": "npx drizzle-kit push:pg",
-    "db:prod": "tsx ./scripts/prod.ts"
+    "db:prod": "tsx ./scripts/prod.ts",
+    "db:seed": "tsx ./scripts/seed.ts",
+    "db:reset": "tsx ./scripts/reset.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.2",
@@ -43,6 +45,7 @@
     "pg": "^8.11.5",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
+    "tsx": "^4.11.0",
     "typescript": "^5.4.5"
   }
 }
