--- a/mevn-typescript/client/package.json
+++ b/mevn-typescript/client/package.json
@@ -11,9 +11,11 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "bootswatch": "^5.3.3",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vue-toast-notification": "^3.1.2"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
