--- a/mevn-typescript/server/package.json
+++ b/mevn-typescript/server/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^4.17.21",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.4.5"
   }
 }
