--- a/social-media-app/client/tsconfig.app.json
+++ b/social-media-app/client/tsconfig.app.json
@@ -3,9 +3,10 @@
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
+    "useUnknownInCatchVariables": false,
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-
+    "plugins": [{ "name": "ts-vue-plugin" }],
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
